# DR_calibration_ros_IRB14000

./: LICENSE  README.md
dr/: CMakeLists.txt  package.xml
dr/src/: XMLGenerator.cpp  pretraining_task.cpp  random_gen.cpp  target_manipulator.cpp  tinyxml2.cpp  training_task.cpp  training_task_new.cpp
dr/template/: base_annotation.xml
dr_description/: CMakeLists.txt  package.xml
dr_description/launch/: yumi_dr_load_model.launch  yumi_dr_load_model_ori.launch
dr_description/urdf/: yumi.transmission.xacro  yumi.xacro  yumi_main.xacro  yumi_ori.xacro
dr_dnn_training/: CMakeLists.txt  package.xml
dr_dnn_training/dataset_gen_csv/: train.csv  validation.csv
dr_dnn_training/launch/: generate_dataset.launch  train_model.launch
dr_dnn_training/scripts/: generate_dataset.py  generate_dataset_ori.py  train_model.py
dr_launch/: CMakeLists.txt  package.xml
dr_launch/launch/: yumi_dr_pretraining.launch  yumi_dr_training_off.launch
dr_msgs/: CMakeLists.txt  package.xml
dr_msgs/msg/: PretrainingPoses.msg  TrainingPoses.msg
dr_ros/: CMakeLists.txt  package.xml
dr_ros/launch/: yumi_dr_pretraining_task.launch  yumi_dr_training_task.launch
dr_ros/src/: EGM_control_node.cpp  dr_pretraining_dataset_gen.py  dr_pretraining_task_node.cpp  dr_training_dataset_gen.py  dr_training_task_node.cpp  dr_training_task_node_new.cpp  get_pose_pretraining_node.cpp  get_pose_training_node.cpp  randomiser_URDF_node.cpp  sim_control_node.cpp
yumi_control/: CMakeLists.txt  package.xml
yumi_control/config/: abb_robot_driver_hardware_egm.yaml  joint_state_controller.yaml  traj_controllers.yaml
yumi_control/launch/: yumi_real_trajectory_control.launch  yumi_sim_trajectory_control.launch
yumi_description/: CMakeLists.txt  package.xml
yumi_description/launch/: yumi_load_model.launch
yumi_description/urdf/: yumi.transmission.xacro  yumi.urdf  yumi.xacro  yumi_main.xacro
yumi_gazebo/: CMakeLists.txt  package.xml
yumi_gazebo/launch/: yumi_gazebo.launch  (+1 more)
yumi_moveit_config/: .setup_assistant  package.xml
(+28 files in other folders)
