<?xml version="1.0"?>
<package format="2">
  <name>yumi_description</name>
  <version>0.0.4</version>
  <description>The yumi_description package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="jose.alberola@stiima.cnr.it">Jose A. Mulet</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/yumi_description</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <author email="jose.alberola@stiima.cnr.it">Jose A. Mulet</author>


  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>abb_egm_hardware_interface</exec_depend>
  <exec_depend>abb_egm_state_controller</exec_depend>
  <exec_depend>abb_rws_service_provider</exec_depend>
  <exec_depend>abb_rws_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
</package>
